[package]
name = "widecast"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.6.0"
crossbeam-queue = "0.3.8"
fxhash = "0.2.1"
scopeguard = "1.2.0"
triomphe = "0.1.9"

[workspace]
members = [
    ".",
    "bench"
]

[dev-dependencies]
assert_matches = "1.5.0"

[profile.release]
debug = true
