[package]
name = "widecast"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.6.0"
crossbeam-queue = "0.3.8"
crossbeam-utils = "0.8.16"
fxhash = "0.2.1"
scopeguard = "1.2.0"
thread_local = "1.1.7"
triomphe = "0.1.9"

[workspace]
members = [
    ".",
    "bench"
]

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.34.0", features = ["macros", "test-util", "rt"] }

[profile.release]
debug = true
