[workspace]
members = [".", "bench", "crates/*"]

[package]
name = "widecast"
version = "0.1.0"
edition = "2021"

[dependencies]
masswake = { path = "crates/masswake" }

arc-swap = "1.6.0"
crossbeam-utils = "0.8.16"
scopeguard = "1.2.0"
thread_local = "1.1.7"
triomphe = { version = "0.1.9", default-features = false, features = ["std"] }

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.34.0", features = ["macros", "test-util", "rt"] }

[profile.release]
debug = true

[patch.crates-io]
loom = { path = "../loom" }
